src/modules/landing-page/components/Header/AuthSubmenu/style.scss
@import "../../../../../scss/variables.scss";
@import "../../../../../scss/animation.scss";

.authenticated-dropdown {
  display: none;
  position: absolute;
  border: 1px solid $main-color;
  background-color: white;
  border-radius: 0.2rem;
  left: 50%;
  transform: translateX(-50%);
}
.authenticated-dropdown::before {
  content: "";
  display: block;
  position: absolute;
  border-style: solid;
  border-color: $main-color;
  border-width: 1px 0 0 1px;
  background: transparent;
  width: 10px;
  height: 10px;
  left: 50%;
  transform: translateX(-50%);
  top: -6px;
  background: inherit;

  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}
.show-register-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  > * {
    margin: 0.5rem;
  }
}

.log-out-btn {
  background-color: red !important;
}

